grammar.txt
<program> ::= <statement>
<statement> ::= "if" <paren-expr> ":" <indented-statement> |
                 "if" <paren-expr> ":" <indented-statement> "else" ":" <indented-statement> |
                 "for" <for-head> indented-statement |
                 <expr>
<indented-statement> ::= <indent> <statement> <dedent>
<indent> ::= "  "
<dedent> ::= "  "
<for-head> ::= <id> "in" <term>
<paren-expr> ::= "(" <expr> ")"
<array> ::= "[" <expr> "]"
<expr> ::= <test> | <id> "=" <expr>
<test> ::= <math> | <math> "<" <math> | <math> ">" <math> | <math> "==" <math>
<math>  ::= <term> | <math> "+" <term> | <math> "-" <term> | <math> "*" <term> | <math> "/" <term>
<term> ::= <id> | <int> | <float> | <string> | <array> | <paren-expr>
<id>   ::= "a" | "b" | ... | "z"
<int>  ::= <digit>, { <digit> }
<float> ::= <digit>, { <digit> }, { "." }, { <digit> }
<string> ::= "'", *, "'" | """, *, """
<digit> ::= "0" | "1" | ... | "9"
